HomePage: Add HomePage component and setup styles

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front-end app for league of legends stats app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "set NODE_ENV=local&& webpack-dev-server --config webpack/dev.config.js"
   },
   "author": "Mesam Timmar",
   "license": "ISC",
@@ -13,8 +13,13 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8",
