--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Front-end app for league of legends stats app",
   "main": "app.js",
   "scripts": {
+    "build": "NODE_ENV=production webpack --config webpack/prod.config.js",
     "start": "set NODE_ENV=local&& webpack-dev-server --config webpack/dev.config.js"
   },
   "author": "Mesam Timmar",
