--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "leaguefyfrontend",
   "version": "1.0.0",
   "description": "Front-end app for league of legends stats app",
-  "main": "app.js",
+  "main": "./src/app.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack/prod.config.js",
     "start": "set NODE_ENV=local&& webpack-dev-server --config webpack/dev.config.js"
