--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/app.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack/prod.config.js",
-    "start": "set NODE_ENV=local&& webpack-dev-server --config webpack/dev.config.js"
+    "start": "set NODE_ENV=local&& webpack-dev-server --config webpack/dev.config.js",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "author": "Mesam Timmar",
   "license": "ISC",
