--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack/prod.config.js",
     "start": "set NODE_ENV=local&& webpack-dev-server --config webpack/dev.config.js",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "author": "Mesam Timmar",
   "license": "ISC",
